# dioxus-scanner

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
examples/: qrcode.rs
src/: lib.rs  main.rs
