[package]
name = "dioxus-scanner"
version = "0.1.0"
authors = ["William Tange <will@tan.ge>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[example]]
name = "qrcode"

[dependencies]
dioxus = "0.4.0"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.0"
image = "0.24.7"
log = "0.4.19"
rand = "0.8.5"
rxing = "0.4.9"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlVideoElement",
    "ImageData",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
]
